header bg overlap bug

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .Header {
   align-items: center;
-  background: var(--background);
+  background: transparent;
   // background-color: var(--darkBlue);
   display: flex;
   height: 5rem;
@@ -10,7 +10,11 @@
   width: 100vw;
   top: 0;
   z-index: 10;
-  // transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+
+  &.isScrolled {
+    background: var(--background);
+  }
 
   [class*="PageContainer"] {
     display: flex;
